fixed a overflow on buttons

--- a/index.css
+++ b/index.css
@@ -578,7 +578,7 @@ height: 300px;
 
 }
 #contact-left{
-    height: 100vh;
+    min-height: 100vh;
     width: 50%;
     display: flex;
     flex-direction: column;
@@ -618,6 +618,7 @@ height: 300px;
     /* justify-content: space-between; */
     gap: 20px;
     margin-top: 50px;
+    flex-direction: row;
 }
 #contact-socail-icons i{
     position: relative;
@@ -639,9 +640,11 @@ height: 300px;
 }
 
 #contact-left a button{
+    position: absolute;
+    left: 0;
     font-size: 1vw;
     padding: 10px 100px;
-    margin-top: 50px;
+    margin-top: 100px;
     border-radius: 20px;
     color: antiquewhite;
     font-family: detail;
